# Isometric-Tile-map-generator

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  contours.json  imgui.ini  map_data.json  proj.py  vcpkg-configuration.json  vcpkg.json
cmake/: include.cmake
libs/: CmakeLists.txt
scripts/builds/: simply.py
scripts/geo/: gather.py  process.py  read.py
scripts/utils/: convert2BW.py  tif-to-png.py
src/: main.cpp
src/Basic/: cube.cpp  cube.hpp
src/Camera/: controller.cpp  controller.hpp
src/Map/: contours.hpp  countours.cpp  gen.cpp  gen.hpp  map_texture.cpp  map_texture.hpp  plot.cpp  plot.hpp  renderer.cpp  renderer.hpp
src/Utils/: color_swatches.cpp  color_swatches.hpp  progressbar.cpp  progressbar.hpp
